Avoid scrolling the content behind when the mobile menu is opened

--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ body {
   color: var(--dark);
 }
 
+body.mobile-menu-open {  
+  overflow: hidden;
+}
+
 .mobile-menu {
   background-color: rgba(211, 211, 211, 0.9);
   position: fixed;
